--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=dpg-cvr7veh5pdvs73ee8fmg-a
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=12345678
-DB_NAME=postgres
+DB_USER=business_credit_report_db_user
+DB_PASSWORD=RxrP2sfa9kA9wWP9M9Smtnf6Q48l4IyG
+DB_NAME=business_credit_report_db
 JWT_SECRET=secret_key
 # Environment
 NODE_ENV=development
